--- a/test/testdata/test-config.yaml
+++ b/test/testdata/test-config.yaml
@@ -7,8 +7,13 @@ itemPerPage:    27
 authorPrefix:   "t2"
 authorIDLength: 8
 couchbase:
-  connectionString: "connection-string"
-  username: "username"
-  password: "password"
-  bucketName: "bucket"
-  postCollection: "posts"
+  url: url
+  username: username
+  password: password
+  buckets:
+    - name: "post"
+      scopes:
+        - name: ""
+          collections:
+            - name: "posts"
+              createPrimaryIndex: true
