[S01][Burhan] Implement GetFeed handler and add post service tests

--- a/test/testdata/test-config.yaml
+++ b/test/testdata/test-config.yaml
@@ -2,7 +2,9 @@ appname: something-special
 server:
   port: 1111
 adsEnabled:     false
-adsFrequency:   3
+adsPositions:
+  3: 2
+  17: 16
 itemPerPage:    27
 authorPrefix:   "t2"
 authorIDLength: 8
