--- a/.config/dev.yaml
+++ b/.config/dev.yaml
@@ -1,3 +1,21 @@
-AppName: "post-api-dev"
-Server:
-  Port: 3000
+appname: "post-api-dev"
+server:
+  port: ":3000"
+adsEnabled: true
+adsPositions:
+  3: 1
+  17: 16
+itemPerPage:    27
+authorPrefix:   "t2_"
+authorIDLength: 8
+couchbase:
+  url: "couchbase://localhost"
+  username: admin
+  password: password
+  buckets:
+    - name: "post"
+      scopes:
+        - name: ""
+          collections:
+            - name: "posts"
+              createPrimaryIndex: true
