--- a/test/testdata/test-config.yaml
+++ b/test/testdata/test-config.yaml
@@ -1,11 +1,12 @@
 appname: something-special
 server:
   port: 1111
+minPostLengthForAd: 3
 adsEnabled: false
 adsPositions:
   3: 2
   17: 16
-itemPerPage:    27
+itemPerPage: 27
 authorPrefix:   "t2"
 authorIDLength: 8
 couchbase:
