--- a/.config/staging.yaml
+++ b/.config/staging.yaml
@@ -1,3 +1,22 @@
-AppName: "post-api-staging"
-Server:
-  Port: 3000
+appname: "post-api-staging"
+logLevel: "debug"
+server:
+  port: ":3000"
+adsEnabled: true
+postLengthAdPositionMap: # the key of that map represents the length of posts. If posts length greater or equal then the promoted post will insert to the corresponding value
+  3: 1
+  17: 16
+itemPerPage:    27
+authorPrefix:   "t2_"
+authorIDLength: 8
+couchbase:
+  url: "couchbase://couchbase"
+  username: admin
+  password: password
+  buckets:
+    - name: "post"
+      scopes:
+        - name: ""
+          collections:
+            - name: "posts"
+              createPrimaryIndex: true
