[S01][Burhan] Add field indexes for couhcbase config

--- a/.config/prod.yaml
+++ b/.config/prod.yaml
@@ -3,6 +3,7 @@ logLevel: "info"
 server:
   port: ":3000"
 adsEnabled: true
+minPostLengthForAd: 3
 postLengthAdPositionMap: # the key of that map represents the length of posts. If posts length greater or equal then the promoted post will insert to the corresponding value
   3: 1
   17: 16
@@ -20,3 +21,9 @@ couchbase:
           collections:
             - name: "posts"
               createPrimaryIndex: true
+              fieldIndexes:
+                - "promoted"
+                - "subreddit"
+                - "author"
+                - "nsfw"
+                - "score"
