--- a/.config/dev.yaml
+++ b/.config/dev.yaml
@@ -2,6 +2,7 @@ appname: "post-api-dev"
 logLevel: "debug"
 server:
   port: ":3000"
+minPostLengthForAd: 3
 adsEnabled: true
 postLengthAdPositionMap: # the key of that map represents the length of posts. If posts length greater or equal then the promoted post will insert to the corresponding value
   3: 1
@@ -20,3 +21,9 @@ couchbase:
           collections:
             - name: "posts"
               createPrimaryIndex: true
+              fieldIndexes:
+                - "promoted"
+                - "subreddit"
+                - "author"
+                - "nsfw"
+                - "score"
